--- a/paper_slides/input/paper.tex
+++ b/paper_slides/input/paper.tex
@@ -10,4 +10,5 @@
 \maketitle
 Hello
 Edit1: This is edit 1 made by Shiqi.
+Edit2: This is edit 2 made by Shiqi after the Github Action.
 \end{document}
