#84 Add one text commit

--- a/paper_slides/input/paper.tex
+++ b/paper_slides/input/paper.tex
@@ -12,4 +12,7 @@ Hello
 Edit1: This is edit 1 made by Shiqi.
 Edit2: This is edit 2 made by Shiqi after the Github Action.
 
+
+I love GSLab!
+
 \end{document}
