#84 Add I am GSLab Boy

--- a/paper_slides/input/paper.tex
+++ b/paper_slides/input/paper.tex
@@ -13,6 +13,6 @@ Edit1: This is edit 1 made by Shiqi.
 Edit2: This is edit 2 made by Shiqi after the Github Action.
 
 
-I love GSLab!
+I am GSLab Boy. I love GSLab!
 
 \end{document}
